shorten pane, sidebar URL params

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -17,9 +17,9 @@
       </section>
       <nav id="navbar">
         <ul id="nav-main">
-          <li><a href="#map-pane">Map</a></li>
-          <li><a href="#plots-pane">Plots</a></li>
-          <li><a href="#summary-pane">Summary</a></li>
+          <li><a href="#map">Map</a></li>
+          <li><a href="#plots">Plots</a></li>
+          <li><a href="#summary">Summary</a></li>
         </ul>
         <ul id="nav-sub">
           <li title="Select an Earthquake"><i class="icon-select"></i></li>
@@ -43,7 +43,7 @@
       </section>
       <section id="select-pane">
         <h2>No Mainshock</h2>
-        <p><a href="#map-pane" class="select">Select an earthquake</a></p>
+        <p><a href="#map" class="select">Select an earthquake</a></p>
       </section>
     </main>
     <aside id="sidebar">
@@ -51,7 +51,7 @@
         <section id="select-bar" class="bar hide">
           <div class="container">
             <h2>Select an Earthquake</h2>
-            <p>Select an earthquake from the list or <a href="#map-pane">map</a>,
+            <p>Select an earthquake from the list or <a href="#map">map</a>,
               or <a href="#" class="search">search</a> the catalog for an
               earthquake. You can also manually enter an Event ID below.</p>
             <h3>Significant Earthquakes <span>Past Month</span></h3>
@@ -70,7 +70,7 @@
           <div class="container">
             <h2>Find an Earthquake</h2>
             <p>Search the ComCat earthquake catalog and display the results on the
-              <a href="#map-pane">map</a>.</p>
+              <a href="#map">map</a>.</p>
             <h3>Magnitude</h3>
             <div class="slider-container">
               <div class="min">0</div>
