--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -7,6 +7,7 @@
       maximum-scale=1.0, user-scalable=0">
     <title>Earthquake Response App</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="preconnect" href="https://earthquake.usgs.gov" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=fallback">
