escape '/' in regex (FireFox); remove required attr

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -64,8 +64,8 @@
             </div>
             <h3>Mainshock</h3>
             <label for="eqid" class="input">Event ID</label>
-            <input type="text" id="eqid" value="" required="required"
-              pattern="^[^/\\:]+$" tabindex="1">
+            <input type="text" id="eqid" value="" pattern="^[^:\/\\]+$"
+              tabindex="1">
             <div id="mainshock" class="hide"></div>
             <button type="reset" id="reset">Reset</button>
           </div>
