--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -59,9 +59,7 @@
               or <a href="#" class="search">search</a> the catalog for an
               earthquake. You can also manually enter an Event ID below.</p>
             <h3>Significant Earthquakes <span>Past Month</span></h3>
-            <div id="significant-eqs">
-              <div class="spinner"></div>
-            </div>
+            <div id="significant-eqs"></div>
             <h3>Mainshock</h3>
             <label for="eqid" class="input">Event ID</label>
             <input type="text" id="eqid" value="" pattern="^[^:\/\\]+$"
