--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -209,7 +209,7 @@
                 autocomplete="off" required="required" tabindex="11"
                 disabled="disabled" title="Disabled because no mainshock is selected">
             </div>
-            <p class="note">When you customize the settings, the
+            <p class="note">When you change the settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
               automatically updated, making it easy to share or bookmark your
               settings.</p>
